--- a/views/index.jade
+++ b/views/index.jade
@@ -14,5 +14,5 @@ block content
           tr(class=(i % 2 == 0) ? 'odd' : 'even')
            td= course.cid
            td 
-              a(href='/course/' + course._id) #{course.title}
+              a(href='/courses/' + course._id) #{course.title}
 
