--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,13 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    block scripts
+      script(type='text/javascript', src="./scripts/jquery/jquery.js")
+      script(type='text/javascript', src="./scripts/underscore/underscore.js")
+      script(type='text/javascript', src="./scripts/backbone/backbone.js")
+      script(type='text/javascript', src="./scripts/require.js")
+      script(type='text/javascript', src="./scripts/main.js")
+  link(rel='stylesheet', href='./css/style.css')
+    
   body
     block content
