--- a/views/user.jade
+++ b/views/user.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1= title 
+  h2= messages
   div
   form.form-horizontal(method="post", action='/users/update/#{id}', enctype="multipart/form-data")
       .control-group
